--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://CISQOSE.github.io/CBS-Site",
+  "homepage": "https://CISQOSE.github.io/CBS-TECH",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-page -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "tailwindcss": "^3.3.3"
+    "gh-pages": "^6.0.0"
   }
 }
